reflectapi-demo/tests/errors/invalid_reflect_field_type_generic.rs
#[derive(reflectapi::Input, reflectapi::Output)]
struct MyStruct {
    field: Vec<NotReflectable>,
}

struct NotReflectable;

fn main() {}
