reflectapi-demo/tests/errors/invalid_reflect_field_type_generic.stderr
error[E0277]: the trait bound `NotReflectable: Input` is not satisfied
 --> tests/errors/invalid_reflect_field_type_generic.rs:3:12
  |
3 |     field: Vec<NotReflectable>,
  |            ^^^^^^^^^^^^^^^^^^^ the trait `Input` is not implemented for `NotReflectable`, which is required by `Vec<NotReflectable>: Input`
  |
  = help: the following other types implement trait `Input`:
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others
  = note: required for `Vec<NotReflectable>` to implement `Input`

error[E0277]: the trait bound `NotReflectable: reflectapi::Output` is not satisfied
 --> tests/errors/invalid_reflect_field_type_generic.rs:3:12
  |
3 |     field: Vec<NotReflectable>,
  |            ^^^^^^^^^^^^^^^^^^^ the trait `reflectapi::Output` is not implemented for `NotReflectable`, which is required by `Vec<NotReflectable>: reflectapi::Output`
  |
  = help: the following other types implement trait `reflectapi::Output`:
            &'static str
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
  = note: required for `Vec<NotReflectable>` to implement `reflectapi::Output`
